# aleph-bot

./: .gitignore  README.md  justfile  main.py  pyproject.toml
src/: cameraSpec.py  gui.py  timing.py
src/robots/: end_effector.py  joints.py  kinematics.py
src/robots/fairinofr3/: config.py  fairino3_v6.urdf  fairinofr3.py  robot.py  simulated.py
src/robots/meca/: config.py  meca.py  meca500r3.urdf  robot.py  simulated.py
src/robots/twoarm/: config.py  twoarm.py
src/robots/xarm/: config.py  robot.py  simulated.py  xarm.py
src/robots/xarm/lite6/: config.py  lite6.urdf
src/robots/xarm/xarm7/: config.py  xarm7.urdf
src/run/: collect.py  experiment.py  inference.py  keyboard_control.py  run.py  teleop.py
src/scripts/: cameras.py  depth.py  parquet.py  replay.py
src/teleoperators/: controller.py  keyboard.py
src/teleoperators/omni/: buttons.py  config.py  hd_device.py  omni.py
src/teleoperators/twocontroller/: config.py  twocontroller.py
src/utils/: camera.py  spatial.py
tests/: test_hello_world.py
training_configs/: pi_train.yaml  rl.json  train_act.txt  train_diffusion.txt
